# api-test

./: .gitignore  README.md  main.py  pyproject.toml
tests/: test_api.py  test_valor_vendas.py
