[tool.poetry]
name = "api-test"
version = "0.1.0"
description = ""
authors = ["Samuel <fujimoto.samuel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.2"
Flask = "^2.1.2"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
